- adjust image sizes to be more readable - fixing bug where list view had default tooltips - updating bootstrap to 3.0.2

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@ body {
 a, [ng-click] {
     cursor: pointer;
 }
+@media (min-width: 768px) and (max-width: 1199px) {
+    .container {
+        width: 100%;
+    }
+}
 .navbar-inverse {
     background: #4C4034;
     color: #fff;
@@ -102,15 +107,15 @@ a, [ng-click] {
 
 /* card selection styles */
 .card-selector-images button img {
-    height: 145px;
+    height: 205px;
 }
 .card-selector,
 textarea.card-raw {
-    height: 325px;
+    height: 425px;
     margin-bottom: 2px;
 }
 .card-selector {
-    padding: 12px 20px;
+    padding: 5px 30px;
     overflow: hidden;
 }
 textarea.card-raw {
@@ -189,11 +194,16 @@ ul.selected-card-list.list-col3 li {
     display: inline-block;
     width: 33.3%;
 }
+.list-col5 li {
+    display: inline-block;
+    width: 20%;
+}
 .list-col6 li {
     display: inline-block;
     width: 16.6%;
 }
 .list-col3 li button,
+.list-col5 li button,
 .list-col6 li button {
     padding: 0;
     width: 100%;
@@ -204,8 +214,9 @@ ul.selected-card-list.list-col3 li {
 .btn-paging-prev,
 .btn-paging-next {
     position: absolute;
+    top: 18px;
     width: 25px;
-    height: 290px;
+    height: 390px;
     padding: 5px;
 }
 .btn-paging-prev {
@@ -231,7 +242,7 @@ ul.selected-card-list.list-col3 li {
 #card-graph {
     display: block;
     width: 100%;
-    height: 300px;
+    height: 250px;
     border: dotted #ccc 1px;
 }
 
